* Breaking changes

  * Name merge functions "upsert1_2_0" instead of "upsert_"

1.2.0 / 2013-04-04

* Breaking changes

  * columns named "created_at" and "created_on" will only be set if it's a new row - thanks @derekharmel! https://github.com/seamusabshere/upsert/pull/15

* Enhancements

  * Detect invalid columns passed in either selector or setter - inspired by @atandrau, thanks! https://github.com/seamusabshere/upsert/issues/18

* Bug fixes

  * Always convert symbols to strings when used as bind vars - thanks @towerhe! - https://github.com/seamusabshere/upsert/pull/16

1.1.7 / 2013-01-15

* Enhancements

  * :assume_function_exists option to avoid creating same merge function over and over
  * Don't die on first occurrence of "tuple concurrently updated"

1.1.6 / 2012-12-20

* Bug fixes

  * Require pg-hstore >=1.1.1 which doesn't escape single quotes and backslashes when output is going to be used in a bind variable (as it is here)

1.1.5 / 2012-12-10

* Bug fixes

  * Properly cast "timestamp without time zone" in postgres - thanks @markmarijnissen! https://github.com/seamusabshere/upsert/issues/11

1.1.4 / 2012-12-06

* Enhancements

  * Use latest pg-hstore gem with standardized namespace

1.1.3 / 2012-12-06

* Bug fix

  * Don't die/fail trying to update an HStore column that has reverted to NULL.

1.1.2 / 2012-12-06

* Enhancements

  * Support for PostgreSQL's HStore

1.1.1 / 2012-12-03

* Bug fixes

  * Removed inadvertent dependency on ActiveSupport - thanks @thbar! https://github.com/seamusabshere/upsert/issues/10

1.1.0 / 2012-11-26

* Enhancements

  * Works on JRuby using bare-metal JDBC!
  * Simplified.

1.0.2 / 2012-11-12

* Bug fixes

  * Fix filenames - they were updated on an apparently case-insensitive setup. Thanks @ihough! (https://github.com/seamusabshere/upsert/pull/8)
  * Deliberately drop MySQL procedures before creating them. Also thanks to @ihough!

1.0.1 / 2012-11-07

* Bug fixes

  * Fix incorrect gem description
